--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,17 @@
 body {
-  padding-top: 4rem;
+  padding-top: 3rem;
 }
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
 }
-.navbar{
-	height: 4rem;
+.top-nav{
+	height: 3rem;
+	padding: 0.5rem 1rem;
+}
+
+@media only screen and (max-width: 500px) {
+    body {
+        background-color: lightblue;
+    }
 }
