--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -105,6 +105,24 @@ color: rgba(0, 0, 0, 0.2);
   margin: 80px auto 0 auto;
 }
 
+.login-button, .login-button:focus, .login-button:active{
+	background-color: rgba(256, 256, 256, 1);
+	opacity: 100%;
+	border-radius: 28px;
+	color: #2F80ED;
+	position: absolute;
+	margin-top: 1%;
+}
+.buttons{
+	display: flex;
+	justify-content: flex-end;
+	margin-right: 1%;
+}
+.login-button:hover{
+	background-color: rgba(256, 256, 256, 0.7);
+	border-radius: 28px;
+}
+
 @media only screen and (max-width: 555px) {
   h1 {
     font-size: 40px;
