--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,48 +20,50 @@ body, html {
 }
 
 h1 {
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 72px;
-padding-top: 100px;
+	font-style: normal;
+	font-weight: bold;
+	line-height: normal;
+	font-size: 72px;
+	padding-top: 100px;
 }
 
 h2 {
-  font-style: normal;
-font-weight: 400;
-line-height: normal;
-font-size: 48px;
+ 	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	font-size: 48px;
 }
 
 h3 {
   font-weight: 600;
-line-height: normal;
-font-size: 24px;
-padding-top: 36px;
-padding-bottom: 24px;
-
-color: #2F80ED;
+	line-height: normal;
+	font-size: 24px;
+	padding-top: 36px;
+	padding-bottom: 24px;
+	color: #2F80ED;
 }
 
 h4 {
-  font-style: normal;
-font-weight: 500;
-line-height: normal;
-font-size: 18px;
+  	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+	font-size: 18px;
+	word-wrap:break-word;
+	display: inline;
 }
 
 p {
-  font-style: normal;
-font-weight: normal;
-line-height: normal;
-font-size: 12px;
-text-align: justify;
+  	font-style: normal;
+	font-weight: normal;
+	line-height: normal;
+	font-size: 12px;
+	text-align: justify;
 }
 .card {
   border-radius: 20px;
   box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.14);
-  margin: 5%;
+  margin: 2%;
+  min-width: 20%;
 }
 
 .card-img-top {
@@ -75,13 +77,13 @@ text-align: justify;
 }
 
 .info {
-  font-style: normal;
-font-weight: normal;
-line-height: normal;
-font-size: 12px;
-text-align: justify;
-padding-left: 8px;
-color: rgba(0, 0, 0, 0.2);
+ 	font-style: normal;
+	font-weight: normal;
+	line-height: normal;
+	font-size: 12px;
+	text-align: justify;
+	padding-left: 8px;
+	color: rgba(0, 0, 0, 0.2);
 }
 
 .icon {
@@ -90,8 +92,7 @@ color: rgba(0, 0, 0, 0.2);
 
 .create {
   text-align: center;
-  width: 100px;
-  margin: auto;
+  word-break:break-all;
 }
 
 .upcoming{
@@ -101,6 +102,26 @@ color: rgba(0, 0, 0, 0.2);
   width: 171px;
   height: 264px;
   text-align: center;
+  text-decoration: none;
+}
+
+#createEvent{
+	text-decoration: none;
+	margin: 2%;
+}
+#eventSuccessful, #eventFailure{
+	width: 100%;
+}
+.flex-col{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.flex-col2{
+	display: flex;
+	align-items: flex-end;
+	flex-direction: column;
+	justify-content: flex-end;
 }
 
 .new-card img {
@@ -108,8 +129,8 @@ color: rgba(0, 0, 0, 0.2);
   width: 50px;
 }
 
-.card-block{
-	height: 100%;
+.new-card{
+	margin: 0;
 }
 
 .login-button, .login-button:focus, .login-button:active{
@@ -134,15 +155,23 @@ color: rgba(0, 0, 0, 0.2);
 	align-items: flex-start;
 	justify-content: center;
 	width: 100%;
+	flex-wrap: wrap;
 }
 
 .row{
 	margin: 0 10%;
 }
 
-.createEventModal{
-	display: absolute;
-	z-index: -500;
+.modal-dialog{
+	background-color: white;
+}
+
+#noPadding{
+	padding-bottom: 0;
+}
+
+.hide{
+	display: none;
 }
 
 @media only screen and (max-width: 555px) {
